# filectrl

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml  filectrl.desktop
.cargo-husky/hooks/: pre-commit
.github/workflows/: release.yml
.opencode/plans/: update-model-favorites.md
fixtures/executables/: script.sh
fixtures/file_types/: symlink_broken  symlink_valid
fixtures/no_delete/: another_protected.txt  protected_file.txt
fixtures/special_files/: link  nonexist
fixtures/special_files/common/: not-exist
fixtures/symlinks/: broken_link.txt
src/: app.rs  clipboard.rs  command.rs  component.rs  components.rs  file_system.rs  keybindings.rs  lib.rs  main.rs  terminal.rs  unicode.rs  utf8.rs  view.rs  views.rs
src/app/: clipboard.rs  color.rs  command.rs  config.rs  debug.rs  default_config.rs  events.rs  focus.rs  handler.rs  state.rs  style.rs  terminal.rs  theme.rs
src/app/config/: default_config.rs  default_config.toml  default_theme.toml  default_theme256.toml  keybindings.rs  ls_colors.rs  serde.rs  serialization.rs  theme.rs
src/command/: handler.rs  mode.rs  progress.rs  result.rs  sorting.rs  task.rs
src/component/: content.rs  footer.rs  header.rs  root.rs
src/components/: content.rs  footer.rs  header.rs  root.rs
src/file_system/: async.rs  converters.rs  debounce.rs  handler.rs  human.rs  operations.rs  path.rs  path_display.rs  path_info.rs  search.rs  stream.rs  sync.rs  task_command.rs  tasks.rs  watch.rs  watcher.rs
src/views/: alerts.rs  breadcrumbs.rs  content.rs  errors.rs  footer.rs  header.rs  help.rs  notices.rs  prompt.rs  root.rs  scrollbar.rs  status.rs  table.rs  unicode.rs
src/views/breadcrumbs/: handler.rs  view.rs  widget.rs
src/views/help/: handler.rs  view.rs  widget.rs
src/views/notices/: handler.rs  notice.rs  notice_kind.rs  notice_type.rs  render.rs  view.rs  widget.rs  widgets.rs
src/views/prompt/: handler.rs  view.rs  widget.rs  widgets.rs  word_navigation.rs
src/views/scrollbar/: handler.rs  view.rs
src/views/status/: handler.rs  render.rs  view.rs  widgets.rs
src/views/table/: actions.rs  clipboard.rs  columns.rs  command_handler.rs  content.rs  directory.rs  double_click.rs  handler.rs  line_item_map.rs  line_to_item.rs  marks.rs  mouse.rs  navigate.rs  navigation.rs  pager.rs  render.rs  row_map.rs  scroll.rs  scrollbar.rs  selection.rs  sort.rs  style.rs  view.rs  widget.rs  widgets.rs
src/views/table/scrollbar/: handler.rs  render.rs  view.rs  widget.rs
themes/: 42km.toml  ibm1970-256.toml  ibm1970.toml
