# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
authors = ["andornaut"]
description = """
FileCTRL is a light, opinionated, responsive, theme-able, and simple Text User Interface (TUI) file manager for Linux and macOS
"""
edition = "2021"
license = "MIT"
name = "filectrl"
readme = "README.md"
repository = "https://github.com/andornaut/filectrl"
version = "0.2.1"

[dependencies]
anyhow = "1.0.101"
argh = "0.1.14"
chrono = {version = "0.4.43", default-features = false, features = ["clock"]}
cli-clipboard = "0.4.0"
env_logger = {version = "0.11.9", default-features = false}
etcetera = "0.11.0"
log = {version = "0.4.29", default-features = false, features = ["serde"]}
nix = {version = "0.31.1", default-features = false, features = ["user"]}
notify = "8.0.0"
open = "5.3.3"
paste = "1.0.15"
rat-text = "3.0.3"
rat-widget = "3.1.1"
ratatui = {version = "0.30.0", features = ["all-widgets", "serde"]}
serde = {version = "1.0.228", features = ["derive"]}
smart-default = "0.7.1"
textwrap = "0.16.2"
toml = "1.0.2"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"
unix_mode = "0.1.4"

[dev-dependencies]
cargo-husky = {version = "1.5.0", default-features = false, features = ["precommit-hook", "run-cargo-test", "run-cargo-check"]}
test-case = "3.3.1"

[profile.release]
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
lto = true # Enable Link Time Optimization
opt-level = 3 # Optimize for performance
panic = 'abort' # Abort on panic
strip = true # Symbols from Binary
