# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
authors = ["andornaut"]
description = """
FileCTRL is a light, opinionated, responsive, theme-able, and simple Text User Interface (TUI) file manager for Linux and macOS
"""
edition = "2024"
rust-version = "1.93"
license = "MIT"
name = "filectrl"
readme = "README.md"
repository = "https://github.com/andornaut/filectrl"
version = "0.4.8"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = "warn"

[dependencies]
anyhow = "1.0.102"
arboard = {version = "3", default-features = false, features = ["wayland-data-control"]}
argh = "0.1.19"
chrono = {version = "0.4.45", default-features = false, features = ["clock"]}
env_logger = {version = "0.11.10", default-features = false}
directories = "6.0.0"
log = {version = "0.4.32", default-features = false, features = ["serde"]}
nix = {version = "0.31.3", default-features = false, features = ["signal", "user"]}
notify = "8.2.0"
ratatui-textarea = {version = "0.9.1", features = ["crossterm"]}
ratatui = {version = "0.30.2", features = ["serde"]}
serde = {version = "1.0.228", features = ["derive"]}
toml = "1.1.2"
unicode-segmentation = "1.13.3"
unix_mode = "0.1.4"
shell-words = "1.1.1"

[dev-dependencies]
cargo-husky = {version = "1.5.0", default-features = false, features = ["user-hooks"]}
test-case = "3.3.1"

[profile.release]
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
lto = true # Enable Link Time Optimization
opt-level = 3 # Optimize for performance
panic = 'abort' # Abort on panic
strip = true # Symbols from Binary
